@@ -1,0 +1,60 @@
+{
+	"id" : 12345,
+	"text" : "Stocks to watch: $VMW, $FB, $AAPL",
+	"in_reply_to_status_id" : 123123123123,
+	"user" : {
+		"id" : 112233,
+		"screen_name" : "habuma",
+		"profile_image_url" : "http://a3.twimg.com/profile_images/1205746571/me2_300.jpg"
+	},
+	"source" : "Spring Social Showcase",
+	"in_reply_to_user_id" : "332211",
+	"retweet_count" : 12,
+	"created_at" : "Tue Jul 13 17:38:21 +0000 2010",
+	"retweeted" : true,
+	"favorited" : true,
+	"entities": {
+		"hashtags": [
+		{
+			"indices": [
+				89, 
+				98
+			], 
+			"text": "testhash"
+		}
+		], 
+		"urls": [
+			{
+				"display_url": "fb.me/t35tur1", 
+				"expanded_url": "http://fb.me/t35tur1", 
+				"indices": [
+					10, 
+					30
+				], 
+				"url": "http://t.co/t35tur1"
+			}
+		],
+		"user_mentions": [
+			{
+				"id": 11223344, 
+				"id_str": "11223344", 
+				"indices": [
+					3, 
+					18
+				], 
+				"name": "Bucky Greenhorn", 
+				"screen_name": "ukuleleman"
+			}, 
+			{
+				"id": 44332211, 
+				"id_str": "44332211", 
+				"indices": [
+					23, 
+					37
+				], 
+				"name": "Jack Diamond", 
+				"screen_name": "jackdiamond"
+			}
+		]
+	}
+}
